--- a/kubernetes/clusters/k2s/kube-system/multus/ks.yaml
+++ b/kubernetes/clusters/k2s/kube-system/multus/ks.yaml
@@ -16,23 +16,23 @@ spec:
     kind: GitRepository
     name: home-kubernetes
   wait: true
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: &appname multus-config
-#   namespace: flux-system
-# spec:
-#   targetNamespace: kube-system
-#   commonMetadata:
-#     labels:
-#       app.kubernetes.io/name: *appname
-#   interval: 10m
-#   path: ./kubernetes/clusters/${ENVIRONMENT}/kube-system/multus/config
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-kubernetes
-#   wait: true
-#   dependsOn:
-#     - name: multus
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &appname multus-config
+  namespace: flux-system
+spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
+  interval: 10m
+  path: ./kubernetes/clusters/${ENVIRONMENT}/kube-system/multus/config
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: true
+  dependsOn:
+    - name: multus
