--- a/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
@@ -24,8 +24,8 @@ spec:
     remediation:
       retries: 3
   values:
-    defaultPodOptions:
-      hostNetwork: true
+    # defaultPodOptions:
+    #   hostNetwork: true
     controllers:
       main:
         annotations:
