--- a/kubernetes/clusters/k2s/kube-system/multus/config/iot-vlan.yaml
+++ b/kubernetes/clusters/k2s/kube-system/multus/config/iot-vlan.yaml
@@ -13,7 +13,7 @@ spec:
           "type": "vlan",
           "master": "enp6s19",
           "mtu": 1500,
-          "vlanId": "40",
+          "vlanId": 40,
           "linkInContainer": false,
           "ipam": {
             "type": "dhcp"
