--- a/kubernetes/clusters/k2s/kube-system/multus/config/iot-vlan.yaml
+++ b/kubernetes/clusters/k2s/kube-system/multus/config/iot-vlan.yaml
@@ -8,6 +8,7 @@ spec:
     {
       "cniVersion": "0.3.1",
       "name": "multus-iot",
+      "loglevel": "debug",
       "plugins": [
         {
           "type": "macvlan",
