--- a/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
@@ -61,6 +61,7 @@ spec:
                 "namespace": "kube-system",
                 "ips": ["192.168.4.242/24"]
               }]
+          command: [cat]
           securityContext:
             privileged: true
             runAsUser: 0
