--- a/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
@@ -61,7 +61,7 @@ spec:
                 "namespace": "kube-system",
                 "ips": ["192.168.4.242/24"]
               }]
-          command: [cat]
+          command: [sleep, 10000]
           securityContext:
             privileged: true
             runAsUser: 0
