--- a/kubernetes/clusters/k2s/kube-system/kustomization.yaml
+++ b/kubernetes/clusters/k2s/kube-system/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   # Flux-Kustomizations
   - ./cilium/ks.yaml
   - ./issuers/ks.yaml
-  - ./multus/ks.yaml
+  #- ./multus/ks.yaml
   #- ./tetragon/ks.yaml
