--- a/ansible/kubernetes/playbooks/cluster-prepare.yaml
+++ b/ansible/kubernetes/playbooks/cluster-prepare.yaml
@@ -42,7 +42,7 @@
               gnupg,hdparm,htop,intel-gpu-tools,intel-media-va-driver-non-free,iperf3,iptables,iputils-ping,ipvsadm,
               libseccomp2,lm-sensors,neofetch,net-tools,nfs-common,nvme-cli,open-iscsi,parted,psmisc,python3,
               python3-apt,python3-kubernetes,python3-yaml,smartmontools,socat,software-properties-common,unzip,
-              util-linux
+              util-linux,bridge-utils
             install_recommends: false
 
     - name: User Configuration
@@ -128,12 +128,21 @@
             line: ManageForeignRoutes=no
         - name: Network Configuration | Set NIC
           ansible.builtin.copy:
-            dest: /etc/network/interfaces.d/enp7s0
+            dest: "/etc/network/interfaces.d/{{ multus_interface }}"
             content: |
-              auto enp7s0
-              allow-hotplug enp7s0
-              iface enp7s0 inet dhcp
-                  post-up ifconfig enp7s0 mtu 9000
+              auto {{ multus_interface }}
+              allow-hotplug {{ multus_interface }}
+              iface {{ multus_interface }} inet manual
+
+              # iot vlan
+              auto {{ multus_interface }}.40
+              iface {{ multus_interface }}.40 inet manual 
+              vlan-raw-device {{ multus_interface }}
+
+              auto vlan40-iot
+              iface vlan40-iot inet manual
+              bridge_ports {{ multus_interface }}.40
+                  
             owner: root
             group: root
             mode: "0644"
