--- a/kubernetes/clusters/k2s/kube-system/multus/config/iot-vlan.yaml
+++ b/kubernetes/clusters/k2s/kube-system/multus/config/iot-vlan.yaml
@@ -17,7 +17,10 @@ spec:
             "ips": true
           },
           "ipam": {
-            "type": "dhcp"
+            "type": "static",
+            "routes": [
+              { "dst": "192.168.4.0/24", "gw": "192.168.4.1" }
+            ]
           }
         }
       ]
