--- a/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
@@ -58,8 +58,7 @@ spec:
             k8s.v1.cni.cncf.io/networks: |
               [{
                 "name":"multus-iot",
-                "namespace": "kube-system",
-                "ips": ["192.168.4.242/24"]
+                "namespace": "kube-system"
               }]
           securityContext:
             runAsUser: 1001
