--- a/kubernetes/clusters/k2s/kube-system/multus/config/iot-vlan.yaml
+++ b/kubernetes/clusters/k2s/kube-system/multus/config/iot-vlan.yaml
@@ -17,10 +17,7 @@ spec:
             "ips": true
           },
           "ipam": {
-            "type": "static",
-            "routes": [
-              { "dst": "192.168.4.0/24", "gw": "192.168.4.1" }
-            ]
+            "type": "dhcp",
           }
         }
       ]
