--- a/kubernetes/clusters/k2s/kube-system/multus/config/iot-vlan.yaml
+++ b/kubernetes/clusters/k2s/kube-system/multus/config/iot-vlan.yaml
@@ -11,7 +11,7 @@ spec:
       "plugins": [
         {
           "type": "macvlan",
-          "master": "vlan40-iot",
+          "master": "enp6s19.40",
           "mode": "bridge",
           "capabilities": {
             "ips": true
