--- a/kubernetes/clusters/main/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/app/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
       name: "${ENVIRONMENT}"
       id: "${CILIUM_ID}"
     clustermesh:
-      useAPIServer: true
+      useAPIServer: false
       config:
         enabled: true
         clusters:
@@ -154,7 +154,7 @@ spec:
       #   userspaceFallback: false
       #   persistentKeepalive: 0s
     hubble:
-      enabled: true
+      enabled: false
       tls:
         auto:
           method: certmanager
