--- a/kubernetes/clusters/main/home-automation/home-assistant/database/cluster.yaml
+++ b/kubernetes/clusters/main/home-automation/home-assistant/database/cluster.yaml
@@ -37,7 +37,7 @@ spec:
   postgresql:
     parameters:
       max_connections: "600"
-      common_buffers: 512MB
+      shared_buffers: 512MB
   monitoring:
     enablePodMonitor: true
   backup:
