--- a/ansible/kubernetes/playbooks/tasks/ceph.yaml
+++ b/ansible/kubernetes/playbooks/tasks/ceph.yaml
@@ -6,5 +6,14 @@
       when: ceph_drives | default([]) | length > 0
       block:
         - name: Wipe (sgdisk)
-          ansible.builtin.command: 'sgdisk --zap-all $(readlink -e {{ item }})'
+          ansible.builtin.command: "sgdisk --zap-all $(readlink -e {{ item }})"
+          loop: "{{ ceph_drives }}"
+        - name: Wipe (dd)
+          ansible.builtin.command: "dd if=/dev/zero of={{ item }} bs=1M count=100 oflag=direct,dsync"
+          loop: "{{ ceph_drives }}"
+        - name: Wipe (blkdiscard)
+          ansible.builtin.command: "blkdiscard {{ item }}"
+          loop: "{{ ceph_drives }}"
+        - name: Wipe (partprobe)
+          ansible.builtin.command: "partprobe {{ item }}"
           loop: "{{ ceph_drives }}"
