--- a/kubernetes/clusters/main/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/clusters/main/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -65,13 +65,13 @@ spec:
         config:
           osdsPerDevice: "1"
         nodes:
-          - name: main-4
+          - name: k8s-main-4
             devices:
               - name: /dev/disk/by-id/scsi-0QEMU_QEMU_HARDDISK_drive-scsi1
-          - name: main-5
+          - name: k8s-main-5
             devices:
               - name: /dev/disk/by-id/scsi-0QEMU_QEMU_HARDDISK_drive-scsi1
-          - name: main-6
+          - name: k8s-main-6
             devices:
               - name: /dev/disk/by-id/scsi-0QEMU_QEMU_HARDDISK_drive-scsi1
       placement:
