--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/services/main.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/app/services/main.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prom-main-prometheus
+  name: prometheus-prom-main
   namespace: monitoring
   annotations:
     io.cilium/global-service: 'true'
