--- a/kubernetes/flux/config/flux.yaml
+++ b/kubernetes/flux/config/flux.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   interval: 10m
   path: ./
-  prune: false
+  prune: true
   wait: true
   sourceRef:
     kind: OCIRepository
@@ -39,7 +39,7 @@ spec:
     - patch: |
         - op: add
           path: /spec/template/spec/containers/0/args/-
-          value: --concurrent=8
+          value: --concurrent=12
         - op: add
           path: /spec/template/spec/containers/0/args/-
           value: --kube-api-qps=500
@@ -64,11 +64,7 @@ spec:
                 - name: manager
                   resources:
                     limits:
-                      cpu: 2000m
                       memory: 2Gi
-                    requests:
-                      cpu: 300m
-                      memory: 384Mi
       target:
         kind: Deployment
         name: source-controller
@@ -84,11 +80,7 @@ spec:
                 - name: manager
                   resources:
                     limits:
-                      cpu: 2000m
                       memory: 2Gi
-                    requests:
-                      cpu: 300m
-                      memory: 384Mi
       target:
         kind: Deployment
         name: helm-controller
@@ -104,26 +96,22 @@ spec:
                 - name: manager
                   resources:
                     limits:
-                      cpu: 2000m
                       memory: 2Gi
-                    requests:
-                      cpu: 500m
-                      memory: 256Mi
       target:
         kind: Deployment
         name: kustomize-controller
-    # Enable drift detection for HelmReleases and set the log level to debug
-    # https://fluxcd.io/flux/components/helm/helmreleases/#drift-detection
+    # Enable in-memory-kustomize builds
+    # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#enable-in-memory-kustomize-builds
     - patch: |
-        - op: add
-          path: /spec/template/spec/containers/0/args/-
-          value: --feature-gates=DetectDrift=true,CorrectDrift=false
-        - op: add
-          path: /spec/template/spec/containers/0/args/-
-          value: --log-level=debug
+        - op: replace
+          path: /spec/template/spec/volumes/0
+          value:
+            name: temp
+            emptyDir:
+              medium: Memory
       target:
         kind: Deployment
-        name: helm-controller
+        name: kustomize-controller
     # Enable Helm near OOM detection
     # https://fluxcd.io/flux/cheatsheets/bootstrap/#enable-helm-near-oom-detection
     - patch: |
@@ -139,22 +127,6 @@ spec:
       target:
         kind: Deployment
         name: helm-controller
-    # Enable notifications for 3rd party Flux controllers such as tf-controller
-    # https://fluxcd.io/flux/cheatsheets/bootstrap/#enable-notifications-for-third-party-controllers
-    - patch: |
-        - op: add
-          path: /spec/versions/1/schema/openAPIV3Schema/properties/spec/properties/eventSources/items/properties/kind/enum/-
-          value: Terraform
-      target:
-        kind: CustomResourceDefinition
-        name: alerts.notification.toolkit.fluxcd.io
-    - patch: |
-        - op: add
-          path: /spec/versions/0/schema/openAPIV3Schema/properties/spec/properties/resources/items/properties/kind/enum/-
-          value: Terraform
-      target:
-        kind: CustomResourceDefinition
-        name: receivers.notification.toolkit.fluxcd.io
     - patch: |
         - op: add
           path: /rules/-
