--- a/kubernetes/clusters/main/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/app/helmrelease.yaml
@@ -27,9 +27,11 @@ spec:
     keepHistory: false
   values:
     autoDirectNodeRoutes: false
+    bandwidthManager:
+      enabled: true
+      bbr: true
     cni:
       exclusive: false
-    enable-ipv4-masquerade: true
     policyAuditMode: true
     resources:
       limits:
@@ -75,6 +77,10 @@ spec:
                   memory: 128Mi
     bpf:
       masquerade: true
+    cgroup:
+      automount:
+        enabled: false
+      hostRoot: /sys/fs/cgroup
     bgp:
       enabled: false
     cluster:
@@ -131,6 +137,9 @@ spec:
     containerRuntime:
       integration: containerd
       socketPath: /var/run/k3s/containerd/containerd.sock
+    enable-ipv4-masquerade: true
+    #devices: eth0
+    enableRuntimeDeviceDetection: true
     endpointRoutes:
       enabled: true
     endpointStatus:
@@ -233,6 +242,7 @@ spec:
         requests:
           cpu: 50m
           memory: 256Mi
+    #policyAuditMode: true
     prometheus:
       enabled: true
       serviceMonitor:
@@ -241,6 +251,22 @@ spec:
       enabled: true
     rollOutCiliumPods: true
     securityContext:
-      privileged: true
+      capabilities:
+        ciliumAgent:
+          - CHOWN
+          - KILL
+          - NET_ADMIN
+          - NET_RAW
+          - IPC_LOCK
+          - SYS_ADMIN
+          - SYS_RESOURCE
+          - DAC_OVERRIDE
+          - FOWNER
+          - SETGID
+          - SETUID
+        cleanCiliumState:
+          - NET_ADMIN
+          - SYS_ADMIN
+          - SYS_RESOURCE
     routingMode: native
     tunnel: disabled
