--- a/kubernetes/clusters/common/kube-system/tetragon/app/helmrelease.yaml
+++ b/kubernetes/clusters/common/kube-system/tetragon/app/helmrelease.yaml
@@ -36,10 +36,10 @@ spec:
         tag: v1.0.2
       resources:
         limits:
-          memory: 1500Mi
+          memory: 2Gi
         requests:
           cpu: 500m
-          memory: 768Mi
+          memory: 1500Mi
       securityContext:
         privileged: true
       prometheus:
