--- a/kubernetes/clusters/main/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/main/media/immich/database/cluster.yaml
@@ -8,7 +8,7 @@ metadata:
     kyverno.io/ignore: "true"
 spec:
   instances: 1
-  imageName: dmcavinue/pgvector:15.5.1
+  imageName: ghcr.io/tensorchord/cloudnative-pgvecto.rs:16.2-v0.2.0
   imagePullPolicy: Always
   inheritedMetadata:
     labels:
