--- a/kubernetes/clusters/main/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/main/media/immich/database/cluster.yaml
@@ -21,20 +21,20 @@ spec:
     #   secret:
     #     name: immich-database-user
     recovery:
-      source: &previousCluster immich-4
+      source: &previousCluster immich-5
   storage:
     size: 5Gi
     storageClass: local-path
   enableSuperuserAccess: true
   superuserSecret:
     name: immich-database-superuser
-  managed:
-    roles:
-    - name: role_vault
-      ensure: present
-      login: false
-      superuser: false
-      disablePassword: true
+  # managed:
+  #   roles:
+  #   - name: role_vault
+  #     ensure: present
+  #     login: false
+  #     superuser: false
+  #     disablePassword: true
   postgresql:
     shared_preload_libraries:
     - vectors.so
@@ -51,7 +51,7 @@ spec:
         maxParallel: 8
       destinationPath: s3://immich
       endpointURL: "https://minio.logfold.com"
-      serverName: &currentCluster immich-5
+      serverName: &currentCluster immich-6
       s3Credentials:
         accessKeyId:
           name: immich-database-superuser
