--- a/kubernetes/clusters/common/flux-system/addons/app/monitoring/podmonitor.yaml
+++ b/kubernetes/clusters/common/flux-system/addons/app/monitoring/podmonitor.yaml
@@ -22,10 +22,10 @@ spec:
           - notification-controller
           - image-automation-controller
           - image-reflector-controller
-  podMetricsEndpoints:
-    - port: http-prom
-      relabelings:
-        # https://github.com/prometheus-operator/prometheus-operator/issues/4816
-        - sourceLabels: [__meta_kubernetes_pod_phase]
-          action: keep
-          regex: Running
+  # podMetricsEndpoints:
+  #   - port: http-prom
+  #     relabelings:
+  #       # https://github.com/prometheus-operator/prometheus-operator/issues/4816
+  #       - sourceLabels: [__meta_kubernetes_pod_phase]
+  #         action: keep
+  #         regex: Running
