fix sa automount

--- a/kubernetes/clusters/k0s/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/grafana/app/helmrelease.yaml
@@ -51,6 +51,8 @@ spec:
     ldap:
       enabled: true
       existingSecret: grafana
+    serviceAccount:
+      autoMount: true
     grafana.ini:
       analytics:
         check_for_updates: false
