--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -198,15 +198,15 @@ spec:
         rollOutPods: true
         ingress:
           enabled: true
+          className: nginx
           hosts:
             - &host "hubble.${DOMAIN}"
           tls:
             - hosts:
                 - *host
           annotations:
-            kubernetes.io/ingress.class: nginx
-            nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
-            nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start
+            # nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
+            # nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.0.0.0/8
