--- a/kubernetes/clusters/main/home-automation/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/main/home-automation/ciliumnetworkpolicy.yaml
@@ -4,6 +4,8 @@ metadata:
   name: default
   namespace: home-automation
 spec:
+  authentication:
+    mode: required
   endpointSelector: {}
   ingress:
     - fromEndpoints:
