--- a/kubernetes/clusters/main/ingress/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/main/ingress/ciliumnetworkpolicy.yaml
@@ -20,6 +20,8 @@ spec:
             k8s:app.kubernetes.io/instance: external-secrets
             k8s:app.kubernetes.io/name: external-secrets
             k8s:io.kubernetes.pod.namespace: kube-system
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "443"
@@ -29,6 +31,8 @@ spec:
             k8s:app.kubernetes.io/instance: nginx
             k8s:app.kubernetes.io/name: ingress-nginx
             k8s:io.kubernetes.pod.namespace: ingress
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "443"
@@ -60,6 +64,8 @@ spec:
             k8s:app.kubernetes.io/instance: home-assistant
             k8s:app.kubernetes.io/name: home-assistant
             k8s:io.kubernetes.pod.namespace: home-automation
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "8123"
@@ -68,6 +74,8 @@ spec:
             k8s:app.kubernetes.io/instance: zwave-js-ui
             k8s:app.kubernetes.io/name: zwave-js-ui
             k8s:io.kubernetes.pod.namespace: home-automation
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "8091"
@@ -76,6 +84,8 @@ spec:
             k8s:app.kubernetes.io/instance: esphome
             k8s:app.kubernetes.io/name: esphome
             k8s:io.kubernetes.pod.namespace: home-automation
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "6052"
@@ -85,6 +95,8 @@ spec:
             k8s:app.kubernetes.io/instance: nginx
             k8s:app.kubernetes.io/name: ingress-nginx
             k8s:io.kubernetes.pod.namespace: ingress
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "443"
@@ -93,6 +105,8 @@ spec:
             k8s:app.kubernetes.io/name: hubble-ui
             k8s:io.kubernetes.pod.namespace: kube-system
             k8s:k8s-app: hubble-ui
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "8081"
@@ -101,6 +115,8 @@ spec:
             k8s:app.kubernetes.io/instance: immich-server
             k8s:app.kubernetes.io/name: immich-server
             k8s:io.kubernetes.pod.namespace: media
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "3001"
@@ -109,6 +125,8 @@ spec:
             k8s:app.kubernetes.io/instance: oauth2-proxy
             k8s:app.kubernetes.io/name: oauth2-proxy
             k8s:io.kubernetes.pod.namespace: security
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "4180"
