--- a/kubernetes/clusters/main/media/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/main/media/ciliumnetworkpolicy.yaml
@@ -13,6 +13,8 @@ spec:
             k8s:app.kubernetes.io/instance: immich-microservices
             k8s:app.kubernetes.io/name: immich-microservices
             k8s:io.kubernetes.pod.namespace: media
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "8108"
@@ -21,6 +23,8 @@ spec:
             k8s:app.kubernetes.io/instance: immich-microservices
             k8s:app.kubernetes.io/name: immich-microservices
             k8s:io.kubernetes.pod.namespace: media
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "5432"
@@ -29,6 +33,8 @@ spec:
             k8s:app.kubernetes.io/instance: immich-server
             k8s:app.kubernetes.io/name: immich-server
             k8s:io.kubernetes.pod.namespace: media
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "8108"
@@ -38,6 +44,8 @@ spec:
             k8s:app.kubernetes.io/instance: nginx
             k8s:app.kubernetes.io/name: ingress-nginx
             k8s:io.kubernetes.pod.namespace: ingress
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "3001"
@@ -46,6 +54,8 @@ spec:
             k8s:app.kubernetes.io/instance: victoria-metrics
             k8s:app.kubernetes.io/name: vmagent
             k8s:io.kubernetes.pod.namespace: monitoring
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "9187"
@@ -54,6 +64,8 @@ spec:
             k8s:app.kubernetes.io/instance: immich-server
             k8s:app.kubernetes.io/name: immich-server
             k8s:io.kubernetes.pod.namespace: media
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "5432"
@@ -62,6 +74,8 @@ spec:
             k8s:app.kubernetes.io/instance: cloudnative-pg
             k8s:app.kubernetes.io/name: cloudnative-pg
             k8s:io.kubernetes.pod.namespace: database
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "8000"
@@ -71,6 +85,8 @@ spec:
         - matchLabels:
             io.kubernetes.pod.namespace: kube-system
             k8s-app: kube-dns
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "53"
@@ -101,6 +117,8 @@ spec:
             k8s:app.kubernetes.io/instance: immich-machine-learning
             k8s:app.kubernetes.io/name: immich-machine-learning
             k8s:io.kubernetes.pod.namespace: media
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "3003"
@@ -108,6 +126,8 @@ spec:
         - matchLabels:
             k8s:cnpg.io/cluster: immich
             k8s:io.kubernetes.pod.namespace: media
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "5432"
@@ -115,6 +135,8 @@ spec:
         - matchLabels:
             k8s:cnpg.io/cluster: immich
             k8s:io.kubernetes.pod.namespace: media
+      authentication:
+        mode: required
       toPorts:
         - ports:
             - port: "5432"
