readd audit mode

--- a/kubernetes/clusters/main/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/app/helmrelease.yaml
@@ -248,6 +248,7 @@ spec:
     dashboards:
       enabled: true
     rollOutCiliumPods: true
+    policyAuditMode: true
     securityContext:
       capabilities:
         ciliumAgent:
