--- a/kubernetes/clusters/main/media/kustomization.yaml
+++ b/kubernetes/clusters/main/media/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   - ./externalsecret.yaml
-  - ./ciliumnetworkpolicy.yaml
+  #- ./ciliumnetworkpolicy.yaml
   # Flux-Kustomizations
   - ./excalidraw/ks.yaml
   - ./immich/ks.yaml
