readd immich db

--- a/kubernetes/clusters/main/media/kustomization.yaml
+++ b/kubernetes/clusters/main/media/kustomization.yaml
@@ -9,5 +9,5 @@ resources:
   #- ./ciliumnetworkpolicy.yaml
   # Flux-Kustomizations
   - ./excalidraw/ks.yaml
-  #- ./immich/ks.yaml
+  - ./immich/ks.yaml
 
