--- a/kubernetes/clusters/main/media/immich/ks.yaml
+++ b/kubernetes/clusters/main/media/immich/ks.yaml
@@ -1,21 +1,21 @@
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: immich
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: media-immich-database
-#   path: ./kubernetes/clusters/${ENVIRONMENT}/media/immich/app
-#   prune: false
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-kubernetes
-#   wait: false
-#   interval: 30m
-#   retryInterval: 1m
-#   timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: immich
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: media-immich-database
+  path: ./kubernetes/clusters/${ENVIRONMENT}/media/immich/app
+  prune: false
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
