--- a/kubernetes/clusters/main/home-automation/music-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/music-assistant/app/helmrelease.yaml
@@ -84,7 +84,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: *port
         tls:
           - hosts:
