--- a/kubernetes/clusters/main/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/home-assistant/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -30,11 +30,11 @@ spec:
       namespace: volsync
   values:
     controllers:
-      main:
+      home-assistant:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/onedr0p/home-assistant
               tag: 2024.2.5
@@ -60,7 +60,7 @@ spec:
                 cpu: 300m
                 memory: 1Gi
               limits:
-                memory: 1500Mi
+                memory: 2Gi
         pod:
           annotations:
             k8s.v1.cni.cncf.io/networks: |
@@ -77,12 +77,13 @@ spec:
             fsGroup: 568
             fsGroupChangePolicy: OnRootMismatch
     service:
-      main:
+      app:
+        controller: home-assistant
         ports:
           http:
             port: &port 8123
     ingress:
-      main:
+      app:
         enabled: true
         className: nginx
         hosts:
@@ -91,7 +92,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: *port
         tls:
           - hosts:
@@ -101,7 +102,6 @@ spec:
       name: home-assistant
     persistence:
       config:
-        enabled: true
         existingClaim: home-assistant
       tmp:
         type: emptyDir
