--- a/kubernetes/clusters/k0s/monitoring/unpoller/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/unpoller/app/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -25,9 +25,9 @@ spec:
     keepHistory: false
   values:
     controllers:
-      main:
+      unpoller:
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/unpoller/unpoller
               tag: v2.10.0@sha256:c2ac3a1415efeec0ad2a191786e570348748570bbdd414d0a56ef663ee09dca4
@@ -53,12 +53,13 @@ spec:
             runAsGroup: 568
             runAsNonRoot: true
     service:
-      main:
+      app:
+        controller: unpoller
         ports:
           http:
             port: 9130
     serviceMonitor:
-      main:
+      app:
         enabled: true
         endpoints:
           - port: http
