--- a/kubernetes/clusters/k0s/monitoring/unpoller/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/unpoller/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
           app:
             image:
               repository: ghcr.io/unpoller/unpoller
-              tag: v2.10.0@sha256:c2ac3a1415efeec0ad2a191786e570348748570bbdd414d0a56ef663ee09dca4
+              tag: v2.10.0
             env:
               TZ: America/New_York
               UP_UNIFI_DEFAULT_ROLE: home-ops
