--- a/kubernetes/clusters/k0s/security/atuin/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/security/atuin/app/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -24,13 +24,13 @@ spec:
     keepHistory: false
   values:
     controllers:
-      main:
+      atuin:
         replicas: 1
         strategy: RollingUpdate
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/atuinsh/atuin
               tag: 18.1.0@sha256:c1245d9bbaf9ef1610a973750003d634d55e52ffb3e14caa9bb47c867e1f6c6e
@@ -63,15 +63,16 @@ spec:
             fsGroup: 568
             fsGroupChangePolicy: OnRootMismatch
     service:
-      main:
+      app:
+        controller: atuin
         ports:
           http:
             port: *port
           metrics:
             port: *metricsPort
     serviceMonitor:
-      main:
-        enabled: true
+      app:
+        serviceName: atuin
         endpoints:
           - port: metrics
             scheme: http
@@ -79,7 +80,7 @@ spec:
             interval: 1m
             scrapeTimeout: 10s
     ingress:
-      main:
+      app:
         enabled: true
         className: nginx
         hosts:
@@ -87,12 +88,11 @@ spec:
             paths:
               - path: /
                 service:
-                  name: main
+                  identifier: atuin
                   port: http
         tls:
           - hosts:
               - *host
     persistence:
       config:
-        enabled: true
         type: emptyDir
