--- a/kubernetes/clusters/k0s/security/lldap/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/security/lldap/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -33,7 +33,7 @@ spec:
     #     runAsGroup: 1001
     #     fsGroupChangePolicy: "OnRootMismatch"
     controllers:
-      main:
+      lldap:
         type: statefulset
         statefulset:
           volumeClaimTemplates:
@@ -46,7 +46,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             # securityContext:
             #   fsGroup: 1001
             #   runAsUser: 1001
@@ -81,7 +81,8 @@ spec:
               - secretRef:
                   name: lldap-secret
     service:
-      main:
+      app:
+        controller: lldap
         type: LoadBalancer
         annotations:
           io.cilium/lb-ipam-ips: "192.168.8.243"
@@ -94,7 +95,7 @@ spec:
           ldaps:
             port: *ldapsPort
     ingress:
-      main:
+      app:
         enabled: false
     serviceAccount:
       create: true
