--- a/kubernetes/clusters/k0s/storage/restic/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/storage/restic/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.0.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -32,7 +32,7 @@ spec:
         runAsUser: 1001
         runAsGroup: 1001
     controllers:
-      main:
+      restic:
         type: statefulset
         statefulset:
           volumeClaimTemplates:
@@ -45,7 +45,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             securityContext:
               fsGroup: 1001
               runAsUser: 1001
@@ -68,12 +68,13 @@ spec:
               repository: restic/rest-server
               tag: 0.12.1
     service:
-      main:
+      app:
+        controller: restic
         ports:
           http:
             port: &port 8000
     ingress:
-      main:
+      app:
         enabled: true
         className: nginx
         hosts:
@@ -82,7 +83,7 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: app
                   port: *port
         tls:
           - hosts:
